# Attalo

./: Attalo  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lib/src/: glad.c
src/: main.cpp
